@@ -1,5 +1,12 @@
 2008-12-20  Jonathon Jongsma  <jonathon@quotidian.org>
 
+	* configure.in:
+	* tests/test-matrix.cc:
+	* tests/test-user-font.cc: fix some test build issues that were causing
+	distcheck to fail
+
+2008-12-20  Jonathon Jongsma  <jonathon@quotidian.org>
+
 	* NEWS:
 	* configure.in: update for release
 
